Added basic Grid

--- a/index.html
+++ b/index.html
@@ -16,13 +16,144 @@
 <script src="connectFour.js"></script>
   </head>
   <body>
-    <div class="jumbotron">
-      <div class="well">
-        <h1>Hello Master</h1>
-        <p>
-          
-        </p>
+    <div class="col-xs-12">
+      <h5>Connect Four</h5>
+    </div>
+    <div class="col-xs-1 side">
+
+    </div>
+
+    <div class="col-xs-10" id="grid">
+      <div class="beam" id="left">
+
       </div>
+      <div class="beam" id="right">
+
+      </div>
+      <div class="col-xs-2 gameColum">
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+      </div>
+      <div class="col-xs-2 gameColum">
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+      </div>
+      <div class="col-xs-2 gameColum">
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+      </div>
+      <div class="col-xs-2 gameColum">
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+      </div>
+      <div class="col-xs-2 gameColum">
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+      </div>
+      <div class="col-xs-2 gameColum">
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+        <div class="hole">
+
+        </div>
+      </div>
+    </div><!--Grid-->
+
+    <div class="col-xs-1 side">
+
     </div>
   </body>
 </html>
