Workable image grid with minor resizing capabilites. Transparent slots.

--- a/index.html
+++ b/index.html
@@ -16,143 +16,160 @@
 <script src="connectFour.js"></script>
   </head>
   <body>
-    <div class="col-xs-12">
+    <div class="col-sm-12">
       <h5>Connect Four</h5>
     </div>
-    <div class="col-xs-1 side">
+    <div class="col-xs-2 side">
 
     </div>
 
-    <div class="col-xs-10" id="grid">
-      <div class="beam" id="left">
-
-      </div>
-      <div class="beam" id="right">
-
-      </div>
-      <div class="col-xs-2 gameColum">
-        <div class="hole">
+    <div class="col-xs-7" id="grid">
+      <img src="http://www.nonkit.com/smallbasic.files/Connect4Board.png"><!--The actual image of the board-->
+<!--Below is the image represented by divs the  boardCol is the colums-->
+<!--The slot is the hole in the boardCol-->
+      <div class="boardCol" id="col-1">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
       </div>
-      <div class="col-xs-2 gameColum">
-        <div class="hole">
+      <div class="boardCol" id="col-2">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
-
-        </div>
-      </div>
-      <div class="col-xs-2 gameColum">
-        <div class="hole">
-
-        </div>
-        <div class="hole">
-
-        </div>
-        <div class="hole">
-
-        </div>
-        <div class="hole">
-
-        </div>
-        <div class="hole">
-
-        </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
       </div>
-      <div class="col-xs-2 gameColum">
-        <div class="hole">
+      <div class="boardCol" id="col-3">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
-
-        </div>
-      </div>
-      <div class="col-xs-2 gameColum">
-        <div class="hole">
-
-        </div>
-        <div class="hole">
-
-        </div>
-        <div class="hole">
-
-        </div>
-        <div class="hole">
-
-        </div>
-        <div class="hole">
-
-        </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
       </div>
-      <div class="col-xs-2 gameColum">
-        <div class="hole">
+      <div class="boardCol" id="col-4">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
 
         </div>
-        <div class="hole">
+        <div class="slot">
+
+        </div>
+      </div>
+      <div class="boardCol" id="col-5">
+        <div class="slot">
+
+        </div>
+        <div class="slot">
+
+        </div>
+        <div class="slot">
+
+        </div>
+        <div class="slot">
+
+        </div>
+        <div class="slot">
+
+        </div>
+        <div class="slot">
+
+        </div>
+      </div>
+      <div class="boardCol" id="col-6">
+        <div class="slot">
+
+        </div>
+        <div class="slot">
+
+        </div>
+        <div class="slot">
+
+        </div>
+        <div class="slot">
+
+        </div>
+        <div class="slot">
+
+        </div>
+        <div class="slot">
+
+        </div>
+      </div>
+      <div class="boardCol" id="col-7">
+        <div class="slot">
+
+        </div>
+        <div class="slot">
+
+        </div>
+        <div class="slot">
+
+        </div>
+        <div class="slot">
+
+        </div>
+        <div class="slot">
+
+        </div>
+        <div class="slot">
 
         </div>
       </div>
     </div><!--Grid-->
 
-    <div class="col-xs-1 side">
+    <div class="col-xs-3 side">
 
     </div>
   </body>
